--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Full Motion by TEMPLATED
+<!--Full Motion by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-	Modified by Ariel Robles arielroblesgonzalez@gmail.com
--->
+	Modified by Ariel Robles arielroblesgonzalez@gmail.com-->
 <html>
 	<head>
 		<title>Pensamientos Propios</title>
@@ -13,13 +11,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body id="top">
-
 			<!-- Banner -->
-			<!--
-				To use a video as your background, set data-video to the name of your video without
+			<!--To use a video as your background, set data-video to the name of your video without
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-				formats to work correctly.
-			-->
+				formats to work correctly.-->
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
@@ -31,11 +26,9 @@
 						<a href="#main" class="more">Learn More</a>
 					</div>
 				</section>
-
 			<!-- Main -->
 				<div id="main">
 					<div class="inner">
-
 					<!-- Boxes -->
 						<div class="thumbnails">
 
@@ -43,7 +36,7 @@
 								<a href="https://youtu.be/Fd8VwHm2zAg" class="image fit"><img src="images/picEJ.png" alt="" /></a>
 								<div class="inner">
 									<h3>Consulado RD en NY</h3>
-									<p>El Ing. Eligio Jaquez nos cuenta como es que<br /><b>"..la compenetracion con la comunidad ha facilitado el trabajo.." </b></p>
+									<p>El Ing. Eligio Jaquez nos cuenta cómo es que:<br /><b>"... la compenetración con la comunidad ha facilitado el trabajo..." </b></p>
 									<a href="https://youtu.be/Fd8VwHm2zAg" class="button fit" data-poptrox="youtube,800x400">Ver</a>
 								</div>
 							</div>
@@ -52,7 +45,7 @@
 								<a href="https://youtu.be/OGxkMNmCJEg" class="image fit"><img src="images/picLA.png" alt="" /></a>
 								<div class="inner">
 									<h3>Candidato Presidencia RD</h3>
-									<p>El Lic. Luis Abinader nos explica como pretende <br /><b> "cambiar de un circulo vicioso del subdesarrollo a uno virtuoso .."</b></p>
+									<p>El Lic. Luis Abinader nos explica como el pretende:<br /><b>"… cambiar de un círculo vicioso del subdesarrollo a uno virtuoso del desarrollo..."</b></p>
 									<a href="https://youtu.be/OGxkMNmCJEg" class="button fit" data-poptrox="youtube,800x400">Ver</a>
 								</div>
 							</div>
@@ -61,7 +54,7 @@
 								<a href="https://youtu.be/tQTJZGnG3jo" class="image fit"><img src="images/picMO.png" alt="" /></a>
 								<div class="inner">
 									<h3>Ex-Vicepresidenta de la RD</h3>
-									<p>La Dra. Milagros Ortiz nos dice lo que le falta a RD. <br /><b> "el ejercicio de la ciudadania es cumplir con las leyes .."</b></p>
+									<p>La Dra. Milagros Ortiz nos dice lo que le falta a RD. <br /><b> "… el ejercicio de la ciudadanía es cumplir con las leyes ..."</b></p>
 									<a href="https://youtu.be/tQTJZGnG3jo" class="button fit" data-poptrox="youtube,800x400">Ver</a>
 								</div>
 							</div>
@@ -70,7 +63,7 @@
 								<a href="https://youtu.be/XOErxbDdwZU" class="image fit"><img src="images/picYR.png" alt="" /></a>
 								<div class="inner">
 									<h3>Candidato Camara de Representantes</h3>
-									<p>El Profesor y Consejal Ydanis Rodriguez nos dice lo que NY necesita: <br /><b> "..un seguro universal de salud que lo tomen todos los doctores..  ..no un acceso de 3ra categoria.."</b></p>
+									<p>El Profesor y Concejal Ydanis Rodríguez nos dice lo que NY necesita:<br /><b> "... un seguro universal de salud que lo tomen todos los doctores... ...no un acceso de 3ra categoría..."</b></p>
 									<a href="https://youtu.be/XOErxbDdwZU" class="button fit" data-poptrox="youtube,800x400">Ver</a>
 								</div>
 							</div>
@@ -79,7 +72,7 @@
 								<a href="https://youtu.be/L0zUUbOP8_Y" class="image fit"><img src="images/picYP.png" alt="" /></a>
 								<div class="inner">
 									<h3>Candidato a Diputado</h3>
-									<p>El Dr. Yomare Polanco nos habla de integracion y de hacer que el acceso a informacion y recursos se pueda propagar entre EEUU y RD: <br /><b> "..que las cosas funcionen aqui y alla para Jovenes y Mayores.."</b></p>
+									<p>El Dr. Yomare Polanco nos habla de integración y de hacer que el acceso a información y recursos se pueda propagar entre EEUU y RD: <br /><b>"… que las cosas funcionen aquí y allá para Jóvenes y Mayores..."</b></p>
 									<a href="https://youtu.be/L0zUUbOP8_Y" class="button fit" data-poptrox="youtube,800x400">Ver</a>
 								</div>
 							</div>
@@ -88,32 +81,31 @@
 								<a href="https://youtu.be/CgcnYp1stWY" class="image fit"><img src="images/picJN.png" alt="" /></a>
 								<div class="inner">
 									<h3>Instructor NYC Police Academy</h3>
-									<p>El Sgt. Johnny Nuñez conincide en que no solo BLM, mas bien: <br /><b> ".. la vida de todo ser humano importa.."</b>
-									<br /><b> ".. lo de JF, no conozco un policia al que no le sea horrorifico.."</b></p>
+									<p>El Sgt. Johnny Núñez coincide en que no solo Black Lives Matter (BLM), más bien: <br /><b> "... la vida de todo ser humano importa..."</b>
+									<br /><b> "... lo de G.F., no conozco un policía al que no le sea horrorifico ..."</b></p>
 									<a href="https://youtu.be/CgcnYp1stWY" class="button fit" data-poptrox="youtube,800x400">Ver</a>
 								</div>
 							</div>
-
 						</div>
-
 					</div>
 				</div>
 
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<h2>Dominicanos del Mundo, donde quiera que esten.</h2>
-						<p>El hacer parte de uno, los altos pensamientos de cada uno de nosotros, hace que avance la Dominicanidad: hasta un porvenir de mejoras continuas de nuestros colectivos e individualidades. </p>
+						<h2>Dominicanos del Mundo, donde quiera que estén.</h2>
+						<p>El hacer parte de uno, los altos pensamientos de cada uno de nosotros, hace que avance la Dominicanidad: hasta un porvenir de mejoras continuas de nuestros colectivos e individualidades.</p>
 
 						<p>Contacta tus anfitriones:</p>
 						<p>
-						Rolando Robles, Samuel Sanchez, Frank Cortorreal
+						Rolando Robles, Samuel Sanchez
 						</p>
 						<ul class="icons">
-							<li><a href="@yourselftk" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<!--	<li><a href="@yourselftk" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="@yourselftk" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="yourselftk#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="rolrobles@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						-->
+							<li><a href="mailto:rolrobles@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<!--
 						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
