update email contacts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--Full Motion by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-	Modified by Ariel Robles arielroblesgonzalez@gmail.com-->
+	Modified by Ariel Robles -->
 <html>
 	<head>
 		<title>Pensamientos Propios</title>
@@ -105,7 +105,7 @@
 							<li><a href="@yourselftk" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="yourselftk#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						-->
-							<li><a href="mailto:rolrobles@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:ultramarpensamientospropios@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<!--
 						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
