--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<!-- Boxes -->
 						<div class="thumbnails">
 							<div class="box">
-								<a href="https://youtu.be/7_LEZ72ZGDA" class="image fit"><img src="images/picRL.jpg" alt="" /></a>
+								<a href="https://youtu.be/7_LEZ72ZGDA" class="image fit"><img src="images/picRL.png" alt="Foto Doctor Lantigua" /></a>
 								<div class="inner">
 									<h3>Doctor Raffy Lantigua</h3>
 									<p>El Doctor Lantigua luego de explicar el proceso recorrido para la compra del edificio: <br /><b> "... la comisión esta de acuerdo con el superior gobierno de que podríamos esperar y podemos esperar..."</b>
@@ -98,7 +98,7 @@
 							</div>
 						
 							<div class="box">
-								<a href="https://youtu.be/gPiiCnm_gAc" class="image fit"><img src="images/picAROP.jpg" alt="" /></a>
+								<a href="https://youtu.be/gPiiCnm_gAc" class="image fit"><img src="images/picAROP.png" alt="Foto Albert Robles y Oscar Pérez" /></a>
 								<div class="inner">
 									<h3>Albert Robles y Oscar Pérez</h3>
 									<p>Con los analistas políticos Albert y Oscar, en tertulia amena hablamos de la historia en la política de los EEUU y la actualidad de la representacción de los dominicanos: 
