--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 					<!-- Boxes -->
 						<div class="thumbnails">
 							<div class="box">
+								<a href="https://youtu.be/2FPjuQ7EUaI" class="image fit"><img src="images/picKR.png" alt="" /></a>
+								<div class="inner">
+									<h3>Joven Talento</h3>
+									<p>La abogada Katering Reyes dice y exhorta:<br /><b>"... el estudio es una pasion que quiero seguir ...</b>										
+									<br /><b>... cuando es universitario te ayuda con planificación y seguimiento...</b>
+									<br /><b>... solo tambien es positivo..."</b></p>
+									<a href="https://youtu.be/2FPjuQ7EUaI" class="button fit" data-poptrox="youtube,800x400">Ver</a>
+								</div>
+							</div>	
+							<div class="box">
 								<a href="https://youtu.be/7_LEZ72ZGDA" class="image fit"><img src="images/picRL.png" alt="Foto Doctor Lantigua" /></a>
 								<div class="inner">
 									<h3>Doctor Raffy Lantigua</h3>
